# starting-ragchatbot-codebase

./: CLAUDE.md  pyproject.toml
.github/workflows/: claude.yml
backend/: ai_generator.py  app.py  config.py  rag_system.py  search_tools.py  session_manager.py  vector_store.py
backend/tests/: conftest.py  test_ai_generator.py  test_api_endpoints.py  test_rag_system.py  test_search_tools.py
frontend/: index.html  script.js  style.css
scripts/: check.sh  format.sh  lint.sh
