[project]
name = "starting-codebase"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb==1.0.15",
    "anthropic==0.58.2",
    "sentence-transformers==5.0.0",
    "fastapi==0.116.1",
    "uvicorn==0.35.0",
    "python-multipart==0.0.20",
    "python-dotenv==1.1.1",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",              # show a summary of all non-passing test outcomes
    "--strict-markers", # error on unknown @pytest.mark.* instead of warning
    "--tb=short",       # concise tracebacks
]
markers = [
    "integration: end-to-end tests that hit the real Anthropic API and ChromaDB (deselect with '-m \"not integration\"')",
    "api: FastAPI HTTP-layer tests using the inline test app (no network/DB)",
]
