[project]
name = "starting-codebase"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb==1.0.15",
    "anthropic==0.58.2",
    "sentence-transformers==5.0.0",
    "fastapi==0.116.1",
    "uvicorn==0.35.0",
    "python-multipart==0.0.20",
    "python-dotenv==1.1.1",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",              # show a summary of all non-passing test outcomes
    "--strict-markers", # error on unknown @pytest.mark.* instead of warning
    "--tb=short",       # concise tracebacks
]
markers = [
    "integration: end-to-end tests that hit the real Anthropic API and ChromaDB (deselect with '-m \"not integration\"')",
    "api: FastAPI HTTP-layer tests using the inline test app (no network/DB)",
]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort, UP: pyupgrade, B: bugbear
select = ["E", "W", "F", "I", "UP", "B"]
# E501 (line too long) is handled by black; ignore so ruff and black don't fight.
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# app.py intentionally calls warnings.filterwarnings() before its imports to
# silence a noisy resource_tracker warning, so module-level imports follow it.
"backend/app.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = [
    "config",
    "vector_store",
    "ai_generator",
    "rag_system",
    "search_tools",
    "session_manager",
    "document_processor",
    "models",
    "app",
]
